[gd_scene load_steps=12 format=3 uid="uid://bbtlso20xfo4w"]

[ext_resource type="Script" path="res://scene/MainMenu.gd" id="1_np301"]
[ext_resource type="Texture2D" uid="uid://oef0uiwas8yj" path="res://art/backgrounds/1e1a04d1-bc9b-464f-8d26-00789da64a7a.webp" id="2_bl2m3"]
[ext_resource type="Theme" uid="uid://dofvwcfpx2h38" path="res://new_theme1.tres" id="3_815au"]
[ext_resource type="Theme" uid="uid://5poy5t11unk2" path="res://new_theme.tres" id="4_k8bby"]
[ext_resource type="FontFile" uid="uid://caepqhvpo3wha" path="res://easvhs.ttf" id="4_y1cu1"]
[ext_resource type="AudioStream" uid="uid://x6fvdng6imvl" path="res://sfx/gaming-music-8-bit-console-play-background-intro-theme-278382.mp3" id="6_unbx0"]

[sub_resource type="Animation" id="Animation_8l4cj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TextureRect/RichTextLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(426, 15)]
}

[sub_resource type="Animation" id="Animation_ob0v6"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xbl8j"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_765ba"]
resource_name = "Title in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TextureRect/RichTextLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.120742, 0.152869),
"update": 0,
"values": [Vector2(427, 15), Vector2(427, 255)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/TextureRect/RichTextLabel/RichTextLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ljbcr"]
_data = {
"RESET": SubResource("Animation_8l4cj"),
"fade_in": SubResource("Animation_ob0v6"),
"fade_out": SubResource("Animation_xbl8j"),
"title_in": SubResource("Animation_765ba")
}

[node name="Control" type="Node2D"]
scale = Vector2(0.649512, 0.684776)
script = ExtResource("1_np301")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color(0.784314, 0.784314, 0.784314, 1)
anchors_preset = -1
anchor_right = 1.04
anchor_bottom = 1.048
offset_left = -53.0
offset_top = -14.0
offset_right = 6.91992
offset_bottom = -13.1041
texture = ExtResource("2_bl2m3")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00584307
anchor_top = 0.0308824
anchor_right = 0.955157
anchor_bottom = 0.962882
offset_left = 433.351
offset_top = -6.00003
offset_right = -310.927
offset_bottom = -520.757
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_k8bby")
theme_override_constants/shadow_offset_y = 6
theme_override_constants/shadow_offset_x = 5
theme_override_fonts/normal_font = ExtResource("4_y1cu1")
text = "      Oxy Quest"
scroll_active = false
autowrap_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/TextureRect/RichTextLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00584307
anchor_top = 0.0308824
anchor_right = 0.955157
anchor_bottom = 0.962882
offset_left = 34.715
offset_top = 56.325
offset_right = -14.8232
offset_bottom = -13.5854
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_k8bby")
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_offset_x = 5
theme_override_fonts/normal_font = ExtResource("4_y1cu1")
theme_override_font_sizes/normal_font_size = 30
text = "The Respiratory Adventure"
scroll_active = false
autowrap_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -161.0
offset_right = 229.0
offset_bottom = -19.0
grow_vertical = 0

[node name="Start" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_direction = 1
layout_mode = 2
theme = ExtResource("3_815au")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Options" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_815au")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_815au")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="transition" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ljbcr")
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/transition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="start" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ljbcr")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_unbx0")
volume_db = -12.117
parameters/looping = true

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="CanvasLayer/transition" to="." method="_on_transition_animation_finished"]
